[package]
name = "hyper-srv"
description = "A wrapper around Hyper's connector with ability to preresolve SRV DNS records."
edition = "2021"
version = "0.4.1"
authors = ["Eugene Palmoff <mahou@shoujo.pw>"]
license = "MIT"
repository = "https://github.com/mahou-shoujo/hyper-srv-rs.git"
homepage = "https://github.com/mahou-shoujo/hyper-srv-rs.git"
readme = "README.md"
categories = ["network-programming", "web-programming"]
keywords = ["http", "hyper", "hyperium", "dns", "srv"]

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["client"] }
tokio = "1"
trust-dns-resolver = "0.20"

[dev-dependencies]
hyper = { version = "0.14", features = ["client", "tcp", "http1", "http2"] }
tokio = { version = "1", features = ["macros"] }
